Auto select text in tag prompt and add keybinds, also fix able to click on invisible lightbox button

--- a/src/gallery/static/style.css
+++ b/src/gallery/static/style.css
@@ -229,7 +229,6 @@ body {
 	transition: background-color 0.2s, color 0.2s;
 	width: 3rem;
 	height: 3rem;
-	pointer-events: auto;
 }
 
 .lightbox-nav:hover,
